# mlops_hw

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
dashboard/: dashboard.py
main/: Dockerfile  pyproject.toml  run.sh
mlflow/: Dockerfile  run.sh
mlops_dz/: __init__.py  app.py  dvc.py  models.py  schemas.py  store.py
mlops_dz/models/: __init__.py  base_model.py  linear_regression.py  neural_network.py
