[tool.poetry]
name = "mlops-dz"
version = "0.1.0"
description = ""
authors = ["Anna Kobyakova <aakobyakova_1@edu.hse.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
