[tool.poetry]
name = "mlops-dz"
version = "0.1.0"
description = ""
authors = ["Anna Kobyakova <aakobyakova_1@edu.hse.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"
minio = "^5.0.7"
werkzeug = "^3.1.3"
mlflow = "^2.18.0"
dvc = {version = "^3.56.0", extras = ["s3"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
